--- a/docker/admin-server/package.json
+++ b/docker/admin-server/package.json
@@ -1,5 +1,8 @@
 {
   "dependencies": {
-    "amqplib": "^0.7.1"
+    "amqplib": "^0.7.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1"
   }
 }
