--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,16 +51,16 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
       - 15672:15672 #admin web interface
     restart: always
 
-  php:
-    build: ./configs/php
-    container_name: php
-    ports:
-      - 9000:9000
-    volumes:
-      #manca il voluma da mappare con tutte le cose statiche va mappato su /usr/share/nginx/html
-      - ./source/index.php:/usr/share/nginx/html/index.php
-      - ./configs/php/www.conf:/usr/local/etc/php-fpm.d/www.conf
-    restart: always
+#  php:
+#    build: ./configs/php
+#    container_name: php
+#    ports:
+#      - 9000:9000
+#    volumes:
+#      #manca il voluma da mappare con tutte le cose statiche va mappato su /usr/share/nginx/html
+#      - ./source/index.php:/usr/share/nginx/html/index.php
+#      - ./configs/php/www.conf:/usr/local/etc/php-fpm.d/www.conf
+#    restart: always
 
 
 # ##############################################################################
@@ -74,8 +74,7 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
       - 8080:80
       - 443:443
     volumes:
-    #manca il voluma da mappare con tutte le cose statiche va mappato su /usr/share/nginx/html
-      - ./source/index.php:/usr/share/nginx/html/index.php
+      - ./admin_webapp:/usr/share/nginx/html/
       - ./configs/nginx-admin/openssl:/cert
       - ./configs/nginx-admin/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
@@ -111,7 +110,7 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
     depends_on:
       - couchdb
       - rabbitmq
-      - superworker
+#      - superworker
       - admin-server
     command:  "./wait-for-it.sh -t 60 couchdb:5984 -- bash -c  './initialize.sh && node worker.js'"
     restart: always
@@ -124,7 +123,7 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
     depends_on:
       - couchdb
       - rabbitmq
-      - superworker
+#      - superworker
       - admin-server
     command:  "./wait-for-it.sh -t 60 couchdb:5984 -- bash -c  './initialize.sh && node worker.js'"
     restart: always
@@ -137,19 +136,19 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
     depends_on:
       - couchdb
       - rabbitmq
-      - superworker
+#      - superworker
       - admin-server
     command:  "./wait-for-it.sh -t 60 couchdb:5984 -- bash -c  './initialize.sh && node worker.js'"
     restart: always
 
-  superworker:
-    build: ./docker/superworker
-    depends_on:
-      - couchdb
-      - rabbitmq
-      - admin-server
-    command:  "./wait-for-it.sh -t 60 couchdb:5984 -- bash -c  './initialize.sh && node superworker.js'"
-    restart: always
+#  superworker:
+#    build: ./docker/superworker
+#    depends_on:
+#      - couchdb
+#      - rabbitmq
+#      - admin-server
+#    command:  "./wait-for-it.sh -t 60 couchdb:5984 -- bash -c  './initialize.sh && node superworker.js'"
+#    restart: always
 
 ##############################################################################
 #ADMIN SERVER
@@ -165,7 +164,7 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
     depends_on:
       - couchdb
       - rabbitmq
-      - php
+#      - php
       - kibana
     command:  "./wait-for-it.sh -t 60 couchdb:5984 -- bash -c  './initialize.sh && node admin-server.js'"
     restart: always
