--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
       - elastic_data:/usr/share/elasticsearch/data/
     networks:
       - elk
+      - default
     restart: always
 
   kibana:
@@ -31,6 +32,7 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
       - elasticsearch  
     networks:
       - elk
+      - default
     restart: always
 
   couchdb:
@@ -43,6 +45,8 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
       - 5984:5984
     volumes:
       - ./couchdb:/opt/couchdb/data
+    networks:
+      - default
     restart: always
 
   rabbitmq:
@@ -51,6 +55,8 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
     ports:
       - 5672:5672
       - 15672:15672 #admin web interface
+    networks:
+      - default
     restart: always
 
 #  php:
@@ -81,6 +87,8 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
       - ./configs/nginx-admin/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - admin-server
+    networks:
+      - default
     restart: always
       
   
@@ -96,6 +104,8 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
       - worker_1
       - worker_2
       - worker_3
+    networks:
+      - default
     restart: always
     
 
@@ -114,6 +124,8 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
       - rabbitmq
 #      - superworker
       - admin-server
+    networks:
+      - default
     command:  "./wait-for-it.sh -t 60 couchdb:5984 -- bash -c  './initialize.sh && node worker.js'"
     restart: always
      
@@ -127,6 +139,8 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
       - rabbitmq
 #      - superworker
       - admin-server
+    networks:
+      - default
     command:  "./wait-for-it.sh -t 60 couchdb:5984 -- bash -c  './initialize.sh && node worker.js'"
     restart: always
   
@@ -140,6 +154,8 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
       - rabbitmq
 #      - superworker
       - admin-server
+    networks:
+      - default
     command:  "./wait-for-it.sh -t 60 couchdb:5984 -- bash -c  './initialize.sh && node worker.js'"
     restart: always
 
@@ -168,6 +184,8 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
       - rabbitmq
 #      - php
       - kibana
+    networks:
+      - default
     command:  "./wait-for-it.sh -t 60 couchdb:5984 -- bash -c  './initialize.sh && node admin-server.js'"
     restart: always
 
@@ -176,3 +194,4 @@ volumes:
 
 networks:
   elk:
+  default:
