--- a/docker/worker/package.json
+++ b/docker/worker/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "amqplib": "^0.7.1",
-    "express": "^4.16.1"
+    "express": "^4.16.1",
+    "websocket": "^1.0.34"
   }
 }
