--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -121,7 +121,7 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
       - SERVICE_NAME=node1
       - WPORT=1337
     depends_on:
-      - couchdb
+#      - couchdb
       - rabbitmq
 #      - superworker
       - admin-server
@@ -136,7 +136,7 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
       - PORT=3002
       - SERVICE_NAME=node2
     depends_on:
-      - couchdb
+#      - couchdb
       - rabbitmq
 #      - superworker
       - admin-server
@@ -151,7 +151,7 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
       - PORT=3003
       - SERVICE_NAME=node3
     depends_on:
-      - couchdb
+#      - couchdb
       - rabbitmq
 #      - superworker
       - admin-server
@@ -181,7 +181,7 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
     ports:
       - 3000:3000
     depends_on:
-      - couchdb
+#      - couchdb
       - rabbitmq
 #      - php
       - kibana
