--- a/docker/worker/package.json
+++ b/docker/worker/package.json
@@ -2,6 +2,6 @@
   "dependencies": {
     "amqplib": "^0.7.1",
     "express": "^4.16.1",
-    "websocket": "^1.0.34"
+    "express-ws": "^5.0.2"
   }
 }
