--- a/docker/worker/package.json
+++ b/docker/worker/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "amqplib": "^0.7.1",
     "express": "^4.16.1",
-    "express-ws": "^5.0.2"
+    "express-ws": "^5.0.2",
+    "@elastic/elasticsearch": "~7.16.0"
   }
 }
