--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 version: '3.6'
-services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli bene con wait-for-it
+services:
 
 ##############################################################################
 #BASE SERVICES
@@ -92,12 +92,11 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
     restart: always
       
   
-  web_server_2: #questo funziona come na specie di load balancer vedi come esempio i config di quello del vitaletti
+  web_server_2:
     image: nginx:1.13.8
     container_name: user-web_server
     ports: 
       - 8081:80
-      #- 444:443 sempre se vogliamo che pure questo è ssl
     volumes:
       - ./configs/nginx-worker/default.conf:/etc/nginx/nginx.conf
     depends_on: 
@@ -123,7 +122,6 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
     depends_on:
 #      - couchdb
       - rabbitmq
-#      - superworker
       - admin-server
     networks:
       - default
@@ -138,7 +136,6 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
     depends_on:
 #      - couchdb
       - rabbitmq
-#      - superworker
       - admin-server
     networks:
       - default
@@ -153,21 +150,11 @@ services:  #ricontrolla tutti le dipendenze dei container e cerca di aggiustarli
     depends_on:
 #      - couchdb
       - rabbitmq
-#      - superworker
       - admin-server
     networks:
       - default
     command:  "./wait-for-it.sh -t 60 rabbitmq:5672 -- bash -c  './initialize.sh && node worker.js'"
     restart: always
-
-#  superworker:
-#    build: ./docker/superworker
-#    depends_on:
-#      - couchdb
-#      - rabbitmq
-#      - admin-server
-#    command:  "./wait-for-it.sh -t 60 rabbitmq:5672 -- bash -c  './initialize.sh && node superworker.js'"
-#    restart: always
 
 ##############################################################################
 #ADMIN SERVER
