remove old comment

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,7 +84,7 @@ services:
 
 
 ##############################################################################
-#WORKER SERVERS -- ATTENZIONE ALLE DIPENDENZE IN package.json
+#WORKER SERVERS
 ##############################################################################
 
   worker_1:
