--- a/docker/admin-server/package.json
+++ b/docker/admin-server/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "amqplib": "^0.7.1",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "@elastic/elasticsearch": "~7.16.0"
   }
 }
