--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -147,7 +147,7 @@ services:
       - kibana
     networks:
       - default
-    command:  "./wait-for-it.sh -t 60 kibana:5601 -- bash -c  './initialize.sh && node admin-server.js'"
+    command:  "./wait-for-it.sh -t 60 elasticsearch:9200 -- bash -c  './initialize.sh && node admin-server.js'"
     restart: always
 
 volumes:
