change from local build to image on the hub

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,7 +88,8 @@ services:
 ##############################################################################
 
   worker_1:
-    build: ./docker/worker
+    #build: ./docker/worker
+    image: andrear632/worker
     container_name: worker_1
     environment:
       - PORT=3001
@@ -103,7 +104,8 @@ services:
     restart: always
      
   worker_2:
-    build: ./docker/worker
+    #build: ./docker/worker
+    image: andrear632/worker
     container_name: worker_2
     environment:
       - PORT=3002
@@ -117,7 +119,8 @@ services:
     restart: always
   
   worker_3:
-    build: ./docker/worker
+    #build: ./docker/worker
+    image: andrear632/worker
     container_name: worker_3
     environment:
       - PORT=3003
@@ -135,7 +138,8 @@ services:
 ##############################################################################
 
   admin-server:
-    build: ./docker/admin-server
+    #build: ./docker/admin-server
+    image: andrear632/adminserver
     container_name: admin-server
     environment:
       - PORT=3000
