--- a/configs/nginx-admin/default.conf
+++ b/configs/nginx-admin/default.conf
@@ -1,21 +1,10 @@
-server{
-    listen 80;
-
-    server_name localhost;
-    root /usr/share/nginx/html;
-
-    location / {
-     return 301 https://$host$request_uri;
-    }
-}
-
 server {
     listen 443 ssl;
 
     ssl_certificate /cert/server.crt;
     ssl_certificate_key /cert/server.key;
 
-    server_name localhost;
+    server_name aws.quiztime.tk;
 
     root /usr/share/nginx/html;
 
