--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,101 +9,101 @@ services:
     image: elasticsearch:7.16.2
     environment:
       ES_JAVA_OPTS: "-Xmx256m -Xms256m"
-      discovery.type: single-node    
+      discovery.type: single-node
+      ES_NETWORK_HOST: "0.0.0.0"
     ports:
       - '9200:9200'
       - '9300:9300'
 
-  kibana:
-    image: kibana:7.16.2
-    ports:
-      - '5601:5601'
-    environment:
-      - ELASTICSEARCH_URL=http://elasticsearch:9200  
-    depends_on:
-      - elasticsearch
+#   kibana:
+#     image: kibana:7.16.2
+#     ports:
+#       - '5601:5601'
+#     environment:
+#       - ELASTICSEARCH_URL=http://elasticsearch:9200  
+#     depends_on:
+#       - elasticsearch
 
-  rabbitmq:
-    image: rabbitmq:3-management
-    ports:
-      - 5672:5672
-      - 15672:15672 #admin web interface
+#   rabbitmq:
+#     image: rabbitmq:3-management
+#     ports:
+#       - 5672:5672
+#       - 15672:15672 #admin web interface
 
-# ##############################################################################
-# #WEB SERVER - NGINX
-# ##############################################################################
+# # ##############################################################################
+# # #WEB SERVER - NGINX
+# # ##############################################################################
 
-  web_server_1:
-    #image: nginx:1.13.8
-    build: ./docker/webserver-admin
-    ports:
-      - 443:443
-    depends_on:
-      - admin-server
+#   web_server_1:
+#     image: andrear632/adminwebserver
+#     ports:
+#       - 443:443
+#     depends_on:
+#       - admin-server
       
   
-  web_server_2:
-    #image: nginx:1.13.8
-    build: ./docker/webserver-worker
-    ports: 
-      - 80:80
-    depends_on: 
-      - worker_1
-      - worker_2
-      - worker_3
+#   web_server_2:
+#     image: andrear632/userwebserver
+#     ports: 
+#       - 80:80
+#     depends_on: 
+#       - worker_1
+#       - worker_2
+#       - worker_3
     
 
 
-##############################################################################
-#WORKER SERVERS
-##############################################################################
+# ##############################################################################
+# #WORKER SERVERS
+# ##############################################################################
 
-  worker_1:
-    #build: ./docker/worker
-    image: andrear632/worker
-    environment:
-      - PORT=3001
-      - SERVICE_NAME=node1
-      - WPORT=1337
-    depends_on:
-      - rabbitmq
-      - admin-server
-    command:  "./wait-for-it.sh -t 60 rabbitmq:5672 -- bash -c  'node worker.js'"
+#   worker_1:
+#     #build: ./docker/worker
+#     image: andrear632/worker
+#     environment:
+#       - PORT=3001
+#       - SERVICE_NAME=node1
+#       - WPORT=1337
+#     depends_on:
+#       - rabbitmq
+#       - admin-server
+#     command:  "./wait-for-it.sh -t 60 rabbitmq:5672 -- bash -c  'node worker.js'"
      
-  worker_2:
-    #build: ./docker/worker
-    image: andrear632/worker
-    environment:
-      - PORT=3002
-      - SERVICE_NAME=node2
-    depends_on:
-      - rabbitmq
-      - admin-server
-    command:  "./wait-for-it.sh -t 60 rabbitmq:5672 -- bash -c  'node worker.js'"
+#   worker_2:
+#     #build: ./docker/worker
+#     image: andrear632/worker
+#     environment:
+#       - PORT=3002
+#       - SERVICE_NAME=node2
+#     depends_on:
+#       - rabbitmq
+#       - admin-server
+#     command:  "./wait-for-it.sh -t 60 rabbitmq:5672 -- bash -c  'node worker.js'"
   
-  worker_3:
-    #build: ./docker/worker
-    image: andrear632/worker
-    environment:
-      - PORT=3003
-      - SERVICE_NAME=node3
-    depends_on:
-      - rabbitmq
-      - admin-server
-    command:  "./wait-for-it.sh -t 60 rabbitmq:5672 -- bash -c  'node worker.js'"
+#   worker_3:
+#     #build: ./docker/worker
+#     image: andrear632/worker
+#     environment:
+#       - PORT=3003
+#       - SERVICE_NAME=node3
+#     depends_on:
+#       - rabbitmq
+#       - admin-server
+#     command:  "./wait-for-it.sh -t 60 rabbitmq:5672 -- bash -c  'node worker.js'"
 
-##############################################################################
-#ADMIN SERVER
-##############################################################################
+# ##############################################################################
+# #ADMIN SERVER
+# ##############################################################################
 
-  admin-server:
-    #build: ./docker/admin-server
-    image: andrear632/adminserver
-    environment:
-      - PORT=3000
-      - NODE_ENV=production
-    ports:
-      - 3000:3000
-    depends_on:
-      - rabbitmq
-      - kibana
+#   admin-server:
+#     #build: ./docker/admin-server
+#     image: andrear632/adminserver
+#     environment:
+#       - PORT=3000
+#       - NODE_ENV=production
+#     ports:
+#       - 3000:3000
+#     depends_on:
+#       - rabbitmq
+#       - kibana
+#     command:  "./wait-for-it.sh -t 60 elasticsearch:9200 -- bash -c  './initialize.sh && node admin-server.js'"
