--- a/docker/webserver-admin/nginx/default.conf
+++ b/docker/webserver-admin/nginx/default.conf
@@ -1,14 +1,14 @@
-server {
-    listen 443 ssl;
+http {
 
-    ssl_certificate /cert/server.crt;
-    ssl_certificate_key /cert/server.key;
+    server {
+    listen 8080;
 
-    server_name aws.quiztime.tk;
+    server_name quiztimeloadb-b0fa170e24992227.elb.us-east-1.amazonaws.com;
 
     root /usr/share/nginx/html;
 
     error_log /var/log/nginx/api_error.log;
     access_log /var/log/nginx/api_access.log;
-}
+    }
 
+}
