--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.0'
+x-aws-loadbalancer: "arn:aws:elasticloadbalancing:us-east-1:819213732848:loadbalancer/net/quiztimeloadb/b0fa170e24992227"
 services:
 
 ##############################################################################
@@ -35,8 +36,8 @@ services:
 # ##############################################################################
 
   web_server_1:
-    build: ./docker/webserver-admin
-    #image: andrear632/adminwebserver
+    #build: ./docker/webserver-admin
+    image: alessandromarzilli/adminwebserver
     ports:
       - 443:443
     depends_on:
@@ -44,8 +45,8 @@ services:
       
   
   web_server_2:
-    build: ./docker/webserver-worker
-    #image: andrear632/userwebserver
+    #build: ./docker/webserver-worker
+    image: alessandromarzilli/userwebserver
     ports: 
       - 80:80
     depends_on: 
@@ -60,8 +61,8 @@ services:
 ##############################################################################
 
   worker_1:
-    build: ./docker/worker
-    #image: andrear632/worker
+    #build: ./docker/worker
+    image: alessandromarzilli/worker
     environment:
       - PORT=3001
       - SERVICE_NAME=node1
@@ -72,8 +73,8 @@ services:
     command:  "./wait-for-it.sh -t 60 rabbitmq:5672 -- bash -c  'node worker.js'"
      
   worker_2:
-    build: ./docker/worker
-    #image: andrear632/worker
+    #build: ./docker/worker
+    image: alessandromarzilli/worker
     environment:
       - PORT=3002
       - SERVICE_NAME=node2
@@ -83,8 +84,8 @@ services:
     command:  "./wait-for-it.sh -t 60 rabbitmq:5672 -- bash -c  'node worker.js'"
   
   worker_3:
-    build: ./docker/worker
-    #image: andrear632/worker
+    #build: ./docker/worker
+    image: alessandromarzilli/worker
     environment:
       - PORT=3003
       - SERVICE_NAME=node3
@@ -98,8 +99,8 @@ services:
 ##############################################################################
 
   admin-server:
-    build: ./docker/admin-server
-    #image: andrear632/adminserver
+    #build: ./docker/admin-server
+    image: alessandromarzilli/adminserver
     environment:
       - PORT=3000
       - NODE_ENV=production
