--- a/docker/webserver-admin/Dockerfile
+++ b/docker/webserver-admin/Dockerfile
@@ -1,4 +1,5 @@
 FROM nginx:1.13.8
 COPY ./admin_webapp /usr/share/nginx/html/
-COPY ./nginx/openssl /cert
-COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+#COPY ./nginx/openssl /cert
+#COPY ./nginx/default.conf /etc/nginx/conf.d/default.conf
+COPY ./nginx/default.conf /etc/nginx/nginx.conf
