--- a/docker/webserver-admin/nginx/default.conf
+++ b/docker/webserver-admin/nginx/default.conf
@@ -1,12 +1,16 @@
-http{
-    server {
-        listen 8080;
+server {
+    listen 591;
 
-        server_name quiztimeloadb-b0fa170e24992227.elb.us-east-1.amazonaws.com;
-
-        root /usr/share/nginx/html;
-
-        error_log /var/log/nginx/api_error.log;
-        access_log /var/log/nginx/api_access.log;
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html;
     }
+
+    #server_name quiztimeloadb-b0fa170e24992227.elb.us-east-1.amazonaws.com;
+    server_name localhost;
+
+    root /usr/share/nginx/html;
+
+    error_log /var/log/nginx/api_error.log;
+    access_log /var/log/nginx/api_access.log;
 }
