--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,17 +36,17 @@ services:
 # ##############################################################################
 
   web_server_1:
-    #build: ./docker/webserver-admin
-    image: alessandromarzilli/adminwebserver
+    build: ./docker/webserver-admin
+    #image: alessandromarzilli/adminwebserver
     ports:
-      - 8080:8080
+      - 591:591
     depends_on:
       - admin-server
       
   
   web_server_2:
-    #build: ./docker/webserver-worker
-    image: alessandromarzilli/userwebserver
+    build: ./docker/webserver-worker
+    #image: alessandromarzilli/userwebserver
     ports: 
       - 80:80
     depends_on: 
@@ -61,8 +61,8 @@ services:
 ##############################################################################
 
   worker_1:
-    #build: ./docker/worker
-    image: alessandromarzilli/worker
+    build: ./docker/worker
+    #image: alessandromarzilli/worker
     environment:
       - PORT=3001
       - SERVICE_NAME=node1
@@ -73,8 +73,8 @@ services:
     command:  "./wait-for-it.sh -t 60 rabbitmq:5672 -- bash -c  'node worker.js'"
      
   worker_2:
-    #build: ./docker/worker
-    image: alessandromarzilli/worker
+    build: ./docker/worker
+    #image: alessandromarzilli/worker
     environment:
       - PORT=3002
       - SERVICE_NAME=node2
@@ -84,8 +84,8 @@ services:
     command:  "./wait-for-it.sh -t 60 rabbitmq:5672 -- bash -c  'node worker.js'"
   
   worker_3:
-    #build: ./docker/worker
-    image: alessandromarzilli/worker
+    build: ./docker/worker
+    #image: alessandromarzilli/worker
     environment:
       - PORT=3003
       - SERVICE_NAME=node3
@@ -99,12 +99,12 @@ services:
 ##############################################################################
 
   admin-server:
-    #build: ./docker/admin-server
-    image: alessandromarzilli/adminserver
+    build: ./docker/admin-server
+    #image: alessandromarzilli/adminserver
     environment:
       - PORT=3000
       - NODE_ENV=production
-      - SLEEP_TIME=180
+      - SLEEP_TIME=20
     ports:
       - 3000:3000
     depends_on:
