--- a/docker/webserver-admin/nginx/default.conf
+++ b/docker/webserver-admin/nginx/default.conf
@@ -14,3 +14,21 @@ server {
     error_log /var/log/nginx/api_error.log;
     access_log /var/log/nginx/api_access.log;
 }
+
+
+server {
+    listen 443 ssl;
+
+    ssl_certificate /cert/server.crt;
+    ssl_certificate_key /cert/server.key;
+
+    server_name quiztimeloadb-b0fa170e24992227.elb.us-east-1.amazonaws.com;
+    
+    location / {
+        proxy_pass http://admin-server:3000;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+    }
+}
