--- a/docker/webserver-admin/nginx/default.conf
+++ b/docker/webserver-admin/nginx/default.conf
@@ -1,19 +1,19 @@
-server {
-    listen 591;
+# server {
+#     listen 591;
 
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html;
-    }
+#     location / {
+#         root   /usr/share/nginx/html;
+#         index  index.html;
+#     }
 
-    #server_name quiztimeloadb-b0fa170e24992227.elb.us-east-1.amazonaws.com;
-    server_name localhost;
+#     #server_name quiztimeloadb-b0fa170e24992227.elb.us-east-1.amazonaws.com;
+#     server_name localhost;
 
-    root /usr/share/nginx/html;
+#     root /usr/share/nginx/html;
 
-    error_log /var/log/nginx/api_error.log;
-    access_log /var/log/nginx/api_access.log;
-}
+#     error_log /var/log/nginx/api_error.log;
+#     access_log /var/log/nginx/api_access.log;
+# }
 
 
 server {
@@ -24,11 +24,24 @@ server {
 
     server_name quiztimeloadb-b0fa170e24992227.elb.us-east-1.amazonaws.com;
     
-    location / {
-        proxy_pass http://admin-server:3000;
+    location = /start {
+        proxy_pass http://admin-server:3000/start;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header        X-Forwarded-Proto $scheme;
+    }
+
+    location = /end {
+        proxy_pass http://admin-server:3000/end;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+    }
+
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html;
     }
 }
