--- a/docker/webserver-admin/nginx/default.conf
+++ b/docker/webserver-admin/nginx/default.conf
@@ -1,28 +1,10 @@
-# server {
-#     listen 591;
-
-#     location / {
-#         root   /usr/share/nginx/html;
-#         index  index.html;
-#     }
-
-#     #server_name quiztimeloadb-b0fa170e24992227.elb.us-east-1.amazonaws.com;
-#     server_name localhost;
-
-#     root /usr/share/nginx/html;
-
-#     error_log /var/log/nginx/api_error.log;
-#     access_log /var/log/nginx/api_access.log;
-# }
-
-
 server {
     listen 443 ssl;
 
     ssl_certificate /cert/server.crt;
     ssl_certificate_key /cert/server.key;
 
-    server_name quiztimeloadb-b0fa170e24992227.elb.us-east-1.amazonaws.com;
+    server_name loadBalancer2-e59f5f735dc34e59.elb.us-east-1.amazonaws.com;
     
     location = /start {
         proxy_pass http://admin-server:3000/start;
@@ -34,6 +16,14 @@ server {
 
     location = /end {
         proxy_pass http://admin-server:3000/end;
+        proxy_set_header        Host $host;
+        proxy_set_header        X-Real-IP $remote_addr;
+        proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header        X-Forwarded-Proto $scheme;
+    }
+
+    location /kibana/ {
+        proxy_pass http://kibana:5061/;
         proxy_set_header        Host $host;
         proxy_set_header        X-Real-IP $remote_addr;
         proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
