--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 version: '3.0'
-x-aws-loadbalancer: "arn:aws:elasticloadbalancing:us-east-1:819213732848:loadbalancer/net/quiztimeloadb/b0fa170e24992227"
+x-aws-loadbalancer: "arn:aws:elasticloadbalancing:us-east-1:079023883045:loadbalancer/net/quizload/af9d17368b7ae969"
 services:
 
 ##############################################################################
@@ -15,15 +15,26 @@ services:
     ports:
       - '9200:9200'
       - '9300:9300'
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 2Gb
 
-  # kibana:
-  #   image: kibana:7.16.2
-  #   ports:
-  #     - '5601:5601'
-  #   environment:
-  #     - ELASTICSEARCH_URL=http://elasticsearch:9200  
-  #   depends_on:
-  #     - elasticsearch
+  kibana:
+    image: kibana:7.16.2
+    ports:
+      - '5601:5601'
+    environment:
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
+      - SERVER_BASEPATH=/kibana
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 2Gb
+    depends_on:
+      - elasticsearch
 
   rabbitmq:
     image: rabbitmq:3-management
@@ -36,8 +47,7 @@ services:
 # ##############################################################################
 
   web_server_1:
-    #build: ./docker/webserver-admin
-    image: alessandromarzilli/adminwebserver
+    image: alessandromarzilli/adminwebserver:lb
     ports:
       - 443:443
     depends_on:
@@ -45,7 +55,6 @@ services:
       
   
   web_server_2:
-    #build: ./docker/webserver-worker
     image: alessandromarzilli/userwebserver
     ports: 
       - 80:80
@@ -61,8 +70,7 @@ services:
 ##############################################################################
 
   worker_1:
-    #build: ./docker/worker
-    image: alessandromarzilli/worker
+    image: alessandromarzilli/worker:lb
     environment:
       - PORT=3001
       - SERVICE_NAME=node1
@@ -73,8 +81,7 @@ services:
     command:  "./wait-for-it.sh -t 60 rabbitmq:5672 -- bash -c  'node worker.js'"
      
   worker_2:
-    #build: ./docker/worker
-    image: alessandromarzilli/worker
+    image: alessandromarzilli/worker:lb
     environment:
       - PORT=3002
       - SERVICE_NAME=node2
@@ -84,8 +91,7 @@ services:
     command:  "./wait-for-it.sh -t 60 rabbitmq:5672 -- bash -c  'node worker.js'"
   
   worker_3:
-    #build: ./docker/worker
-    image: alessandromarzilli/worker
+    image: alessandromarzilli/worker:lb
     environment:
       - PORT=3003
       - SERVICE_NAME=node3
@@ -99,7 +105,6 @@ services:
 ##############################################################################
 
   admin-server:
-    #build: ./docker/admin-server
     image: alessandromarzilli/adminserver
     environment:
       - PORT=3000
@@ -109,5 +114,5 @@ services:
       - 3000:3000
     depends_on:
       - rabbitmq
-#      - kibana
+      - kibana
     command:  "./wait-for-it.sh -t 60 elasticsearch:9200 -- bash -c  './initialize.sh && node admin-server.js'"
