--- a/docker/webserver-admin/nginx/default.conf
+++ b/docker/webserver-admin/nginx/default.conf
@@ -4,7 +4,7 @@ server {
     ssl_certificate /cert/server.crt;
     ssl_certificate_key /cert/server.key;
 
-    server_name quizload-af9d17368b7ae969.elb.us-east-1.amazonaws.com;
+    server_name aws.quiztime.tk;
     
     location = /start {
         proxy_pass http://admin-server:3000/start;
